# ThunderVision

./: .gitignore  CMakeLists.txt  README  cmake_install.cmake
BenchmarkApp/src/: CMakeLists.txt  benchdatasetfactory.cpp  benchdatasetfactory.hpp  benchmarkrunner.cpp  benchmarkrunner.hpp  benchmarksuite.hpp  bmdataset.hpp  bmdatasetfactory.cpp  bmdatasetfactory.hpp  bmrunner.cpp  bmrunner.hpp  defaultbenchdataset.hpp  ibenchmarkdataset.hpp  imatchercompmetric.hpp  main.cpp  meancompmetric.cpp  meancompmetric.hpp  meanqmetric.cpp  meanqmetric.hpp  qualitymetric.hpp  run_tests.py  simplebenchmark.cpp
BenchmarkApp/tests/: specbenchmark.cpp
CMakeModules/: Antlr.cmake  FindGLEW.cmake
ConsoleApp/src/: main.cpp
GUIApp/: CMakeLists.txt  resources.qrc
GUIApp/src/: CMakeLists.txt  appcontext.cpp  appcontext.hpp  calibrationapp.cpp  calibrationcontext.cpp  calibrationcontext.hpp  calibrationdialog.cpp  calibrationdialog.hpp  calibrationdialog.ui  calibrationwidget.cpp  calibrationwidget.hpp  calibrationwidget.ui  camcalibrationcontext.cpp  camcalibrationcontext.hpp  camerasinputprocess.cpp  camerasinputprocess.hpp  camerasview.ui  camerasviewdialog.cpp  camerasviewdialog.hpp  camerasviewdialog.ui  camerasviewwidget.cpp  camerasviewwidget.hpp  camerawidget.cpp  camerawidget.hpp  cmdline.cpp  cmdline.hpp  disparitydialog.cpp  disparitydialog.hpp  disparitydialog.ui  errorreport.hpp  inputprocess.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  reconstructcontext.cpp  reconstructcontext.hpp  reconstructwidget.hpp  rectificationviewdialog.cpp  rectificationviewdialog.hpp  (+11 more)
GUIApp/tests/: CMakeLists.txt  testcamerasviewwidget.cpp  testcamerawidget.cpp  testcamerawidgetsimple.cpp  testsimplevideowidget.cpp  testvideofilter.cpp
LibThunderBasic/: CMakeLists.txt
LibThunderBasic/src/: CMakeLists.txt
LibThunderBasic/src/tdvbasic/: CMakeLists.txt  common.hpp  exception.hpp  log.cpp  log.hpp  readfile.cpp  readfile.hpp  util.cpp  util.hpp
LibThunderBasic/tests/: CMakeLists.txt  testlog.cpp  testutil.cpp
LibThunderVision/: CMakeLists.txt
LibThunderVision/src/: CMakeLists.txt  common.hpp  lumimage.cpp  lumimage.hpp  stereoflow.hpp
LibThunderVision/src/tdvision/: CMakeLists.txt  ThunderLang.g  benchmark.cpp  benchmark.hpp  birchfieldcost.cu  birchfieldcostdev.cpp  birchfieldcostdev.hpp  calibration.cpp  calibration.hpp  cameraparameters.cpp  cameraparameters.hpp  camerasdesc.cpp  camerasdesc.hpp  camerastereoinputsource.cpp  camerastereoinputsource.hpp  captureproc.cpp  captureproc.hpp  capturestereoinputsource.cpp  capturestereoinputsource.hpp  capturewu.cpp  capturewu.hpp  chessboardpattern.cpp  chessboardpattern.hpp  commonstereomatcherfactory.cpp  commonstereomatcherfactory.hpp  cpustereomatcher.cpp  cpustereomatcher.hpp  cpyimagetocpu.cpp  cpyimagetocpu.hpp  crosscorrelation.cu  crosscorrelationdev.cpp  crosscorrelationdev.hpp  ctrlprocess.cpp  ctrlprocess.hpp  cudaconstraits.cu  cudaconstraits.hpp  cudamisc.hpp  cudaprocess.cpp  cudaprocess.hpp  cuerr.cpp  (+153 more)
LibThunderVision/tests/: CMakeLists.txt  errorhandler.hpp  stereotest.cpp  stereotest.hpp  tdvtestmain.cpp  testbenchmark.cpp  testbirchfieldcost.cpp  testcalibration.cpp  testcapture.cpp  testcrosscorrelation.cpp  testfastwta.cpp  testfloatimage.cpp  testgridglmesh.cpp  testimage.cpp  testlumimage.hpp  testmedianfilter.cpp  testmutualinformation.cpp  testpipeline.cpp  testrectification.cpp  testsemiglobal.cpp  testsemiglobalcpu.cpp  testsemigloballab.cpp  testssddev.cpp  teststereovision.cpp  testtdvcontext.cpp  testthunderlang.cpp
Ud/: CMakeLists.txt  FindFTGL.cmake  FindGoogleTest.cmake  FindTBB.cmake  FindUD.cmake  astyle.options
Ud/lib/: CMakeLists.txt
Ud/lib/tinyxml/: CMakeLists.txt  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxmlparser.cpp
Ud/src/: CMakeLists.txt
Ud/src/shaders/: CMakeLists.txt  deferred_pass1.frag  deferred_pass1.vert  deferred_pass2.frag  normalmapping.frag  normalmapping.vert  parallaxmapping.frag  shadowmapping.frag  shadowmapping.vert  svextrusion.frag  svextrusion.geo  svextrusion.vert  waterplane.frag  waterplane.vert
Ud/src/ud/: CMakeLists.txt  collision.cpp  collision.hpp  common.hpp  commondatastream.cpp  commondatastream.hpp  config.h  debug.cpp  debug.hpp  exception.hpp  logger.cpp  logger.hpp  noncopyable.hpp  singleton.hpp  ssmprofile.cpp  ssmprofile.hpp  xml.cpp  xml.hpp
Ud/src/ud/math/: CMakeLists.txt  math.cpp  math.hpp  matrix22.hpp  matrix33.hpp  matrix44.hpp  plane.hpp  quat.cpp  quat.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
Ud/src/ud/ugl/: CMakeLists.txt  aabb.cpp  aabb.hpp  boundingsphere.hpp  camera.cpp  camera.hpp  collision.cpp  collision.hpp  color.cpp  color.hpp  fpscounter.cpp  fpscounter.hpp  framebuffer.cpp  framebuffer.hpp  frustum.cpp  frustum.hpp  glstate.hpp  light.cpp  light.hpp  misc.cpp  misc.hpp  pathanimation.cpp  pathanimation.hpp  projection.cpp  projection.hpp  stereo.cpp  stereo.hpp
doc/: ThunderVision.asta  impl.juth
res/: calib_ext.tl  calib_ins.tl  cam0.avi  cam1.avi  camerasdesc.tl  chessboard.xcf
res/Benchmark/Cones/: q_left.ppm  q_right.ppm
res/Benchmark/Teddy/: q_right.ppm
