CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ThunderVision)
SET(THUNDERVISION_VERSION_MAJOR 0)
SET(THUNDERVISION_VERSION_MINOR 1)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(Boost COMPONENTS filesystem system thread REQUIRED)
FIND_PACKAGE(CUDA REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS}
  ${CUDA_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS})

SET(ThunderVision_LIBRARIES ${OpenCV_LIBS} ${Boost_LIBRARIES} tdvision tdvbasic)

ADD_SUBDIRECTORY(LibThunderBasic)
ADD_SUBDIRECTORY(LibThunderVision)
