CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ThunderVision)
SET(THUNDERVISION_VERSION_MAJOR 0)
SET(THUNDERVISION_VERSION_MINOR 1)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(Boost COMPONENTS filesystem system thread program_options REQUIRED)
FIND_PACKAGE(CUDA REQUIRED)

INCLUDE(Antlr)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS}
  ${CUDA_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS})

SET(ThunderBasic_LIBRARIES ${Boost_LIBRARIES})
SET(ThunderVision_LIBRARIES ${OpenCV_LIBS} ${Boost_LIBRARIES}
  antlr3c tdvision tdvbasic )

ADD_SUBDIRECTORY(LibThunderBasic)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/LibThunderBasic/src)
ADD_SUBDIRECTORY(LibThunderVision)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/LibThunderVision/src)
ADD_SUBDIRECTORY(BenchmarkApp)
ADD_SUBDIRECTORY(GUIApp)