PROJECT(Ud)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(UD_EMBED "YES")
SET(UD_COMMON "YES")
SET(UD_MATH "YES")
SET(UD_UGL "YES")
SET(UD_RES "YES")
SET(UD_APP "YES")
SET(UD_SCENE "YES")

INCLUDE(FindUD.cmake)

SET(TINYXML_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib/tinyxml)
SET(UD_INCLUDE_DIRS ${UD_INCLUDE_DIRS} ${TINYXML_DIR})
SET(UD_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

FIND_PACKAGE(GoogleTest REQUIRED)
ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(tests)
#ADD_SUBDIRECTORY(samples)
#ADD_SUBDIRECTORY(tools)

IF (WIN32 AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/WinDLL)
  ADD_SUBDIRECTORY(WinDLL)
ENDIF(WIN32 AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/WinDLL)

INCLUDE(InstallRequiredSystemLibraries)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Ud library and samples")
SET(CPACK_PACKAGE_VENDOR "Ud project")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")

#SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ReadMe.txt")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
SET(CPACK_PACKAGE_CONTACT "otavio.b.gomes@gmail.com")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "Ud ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")

IF(WIN32 AND NOT UNIX)
  # There is a bug in NSI that does not handle full unix paths properly. Make
  # sure there is at least one set of four (4) backlasshes.
  SET(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY} Ud")
  SET(CPACK_NSIS_CONTACT "")
  SET(CPACK_NSIS_MODIFY_PATH ON)
ELSE(WIN32 AND NOT UNIX)
  SET(CPACK_DEBIAN_PACKAGER_MAINTAINER "Otávio Basso Gomes")                     
  SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.3.1-6), libgcc1 (>= 1:3.4.2-12), libglew1.5-dev (>= 1.5.0), libsdl1.2-dev")
  SET(CPACK_SOURCE_STRIP_FILES "")
ENDIF(WIN32 AND NOT UNIX)

#SET(CPACK_PACKAGE_EXECUTABLES)
INCLUDE(CPack)
