INCLUDE_DIRECTORIES(${UD_INCLUDE_DIRS})
LINK_DIRECTORIES(${UD_LIBRARY_DIRS})
AUX_SOURCE_DIRECTORY(${TINYXML_DIR} TX_SRCS)

ADD_LIBRARY(UdCommon
  common.hpp
  commondatastream.hpp commondatastream.cpp
  debug.hpp debug.cpp
  logger.hpp logger.cpp
  noncopyable.hpp
  exception.hpp
  singleton.hpp
  xml.hpp xml.cpp
  ${TX_SRCS})

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/math)
  ADD_SUBDIRECTORY(math)
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/math)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/ugl)
  ADD_SUBDIRECTORY(ugl)
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/ugl)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/app)
  ADD_SUBDIRECTORY(app)
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/app)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/res)
  ADD_SUBDIRECTORY(res)
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/res)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/scene)
  ADD_SUBDIRECTORY(scene)
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/scene)

FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
INSTALL(FILES ${files} DESTINATION include/ud)
INSTALL(TARGETS UdCommon
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
